--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
     html, body {
       height: 100%;
+        background-color: #e5e5e5;
     }
 
     .images {
@@ -86,6 +87,7 @@
       color: #DAA520;
       text-transform: capitalize;
       margin-top: 30px;
+         text-shadow: 2px 2px #000;
     }
 
     .home section p {
@@ -99,6 +101,23 @@
       margin-right: 70px;
       margin-left: 70px;
     }
+
+.main-heading {
+    background-image: url("img/pasta.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 1px solid #000;
+    border-radius: 20px;
+    filter: grayscale(60%);
+}
+
+.main-heading h1 {
+    padding: 25px;
+    color: #000;
+    font-size: 50px;
+    text-shadow: 2px 2px #fff;
+    font-family: 'Amatic', sans-serif;
+}
 
     /*pic one*/
 
@@ -217,10 +236,6 @@
     }
 
     /*Image Gallery*/
-
-    .gallery-box {
-      background-color: #e5e5e5;
-    }
 
     .wrapper {
       display: flex;
