--- a/style.css
+++ b/style.css
@@ -3,22 +3,12 @@
       padding: 0;
       border: 0;
       box-sizing: border-box;
+      -webkit-overflow-scrolling: touch;
     }
 
     html, body {
       height: 100%;
         background-color: #e5e5e5;
-    }
-
-    .images {
-      height: 400px;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      width: 100%;
-      max-width: 100%;
-      border-top: 3px ridge #000;
-      border-bottom: 3px ridge #000;
     }
 
     /*logo*/
@@ -87,7 +77,7 @@
       color: #DAA520;
       text-transform: capitalize;
       margin-top: 30px;
-         text-shadow: 2px 2px #000;
+      text-shadow: 2px 2px #000;
     }
 
     .home section p {
@@ -123,6 +113,14 @@
 
     .pic-one {
     background-image: url("img/IMG_0750.jpg");
+     height: 400px;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      width: 100%;
+      max-width: 100%;
+      border-top: 3px ridge #000;
+      border-bottom: 3px ridge #000;
     }
 
     /*About section*/
@@ -170,6 +168,14 @@
 
     .pic-two {
     background-image: url("img/IMG_0756.jpg");
+     height: 400px;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      width: 100%;
+      max-width: 100%;
+      border-top: 3px ridge #000;
+      border-bottom: 3px ridge #000;
     }
 
     /*Menu Section*/
@@ -233,6 +239,14 @@
 
     .pic-three {
       background-image: url("img/IMG_0718.jpg");
+     height: 400px;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      width: 100%;
+      max-width: 100%;
+      border-top: 3px ridge #000;
+      border-bottom: 3px ridge #000;
     }
 
     /*Image Gallery*/
@@ -367,7 +381,7 @@
 
     /*Media Queries*/
 
-    @media screen and (max-width: 1200px) {
+    @media only screen and (max-width: 1200px) {
 
 
       .contact section {
@@ -381,13 +395,7 @@
       }
     }
 
-    @media screen and (min-width: 768px) {
-      nav ul {
-        display: block !important;
-      }
-    }
-
-    @media screen and (max-width: 767px) {
+    @media only screen and (max-width: 767px) {
       .logo img {
         height: 90%;
         width: 90%;
@@ -413,6 +421,25 @@
         display: block;
         background-color: #353535;
       }
+        
+        .images {
+            background-position: center;
+        }
+        
+        .pic-one {
+    background-image: url("img/pic1small.jpg");
+     background-position: center;
+        }
+        
+         .pic-two {
+    background-image: url("img/pic2small.jpg");
+             background-position: center;
+        }
+        
+         .pic-three {
+    background-image: url("img/pic3small.jpg");
+             background-position: center;
+        }
 
       .home h1 {
         font-size: 40px;
@@ -476,7 +503,7 @@
       }
     }
 
-    @media screen and (max-width: 425px) {
+    @media only screen and (max-width: 425px) {
       .logo img {
         height: 90%;
         width: 90%;
@@ -520,5 +547,11 @@
       iframe {
         width: 70%;
         height: 70%;
+      }
+    }
+
+  @media only screen and (min-width: 768px) {
+      nav ul {
+        display: block !important;
       }
     }
