--- a/style.css
+++ b/style.css
@@ -73,11 +73,12 @@
     .home h1 {
       text-align: center;
       font-family: 'Laila', sans-serif;
-      font-size: 50px;
-      color: #DAA520;
+       font-size: 60px;
+      color: #000;
       text-transform: capitalize;
       margin-top: 30px;
-      text-shadow: 2px 2px #000;
+      padding: 25px;
+      text-shadow: 1px 1px white;
     }
 
     .home section p {
@@ -96,17 +97,9 @@
     background-image: url("img/pasta.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
-    border: 1px solid #000;
     border-radius: 20px;
-    filter: grayscale(60%);
-}
-
-.main-heading h1 {
-    padding: 25px;
-    color: #000;
-    font-size: 50px;
-    text-shadow: 2px 2px #fff;
-    font-family: 'Amatic', sans-serif;
+    width: 80vw;
+    margin: auto;
 }
 
     /*pic one*/
@@ -221,7 +214,7 @@
       color: #DAA520;
       text-transform: full-width;
       margin-top: 30px;
-      text-shadow: 2px 2px black;
+      text-shadow: 1px 1px black;
     }
 
     .menu h3 {
