--- a/style.css
+++ b/style.css
@@ -271,9 +271,10 @@
       width: 600px;
       height: auto;
       max-width: 100%;
-      padding: 30px;
-      border-radius: 30%;
+      padding: 20px;
+      border-radius: 15%;
     }
+
 
     .img-single figcaption {
       background-color: rgba(191, 178, 63, 0.7);
@@ -371,6 +372,35 @@
 
     .footer p a:hover {
       color: #fef006;
+    }
+
+/*Loading Spinner*/
+
+
+#overlay {
+    height: 100%;
+    width:100%;
+    background: rgba(223, 223, 107,0.7);
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.spinner {
+    width: 100px;
+    height: 100px;
+    border: 5px solid #fff;
+    border-top-color: firebrick;
+    border-radius: 100%;
+    margin-top: 500px;
+    animation: round 1s linear infinite;
+}
+    
+    @keyframes round {
+        from{transform: rotate(0deg)}
+        to {transform: rotate(360deg)}
     }
 
 
