--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ height: 100vh;
 background: url(img/IMG_0718.jpg) no-repeat;
 background-size: cover;
 background-position: center;
-position: relative;
 }
 
 
@@ -59,10 +58,9 @@ z-index: 1000;
 }
 
 nav ul {
-line-height: 60px;
 color: #fff;
 text-align: right;
-padding-right: 40px;
+padding: 15px;
 transition: 1000ms;
 }
 
@@ -101,7 +99,6 @@ justify-content: center;
 align-items: center;
 flex-direction: column;
 position: relative;
-top: 40%;
 }
 
 .home h1 {
@@ -568,7 +565,9 @@ font-size: 20px;
 
 
 .home h1 {
-font-size: 30px;
+font-size: 35px;
+padding: 15px;
+width: 100vw;
 }
 
 
@@ -580,6 +579,16 @@ font-size: 35px;
 display: flex;
 flex-direction: column;
 justify-content: center;
+}
+    
+.para-one {
+margin-top: 30px;
+margin-bottom: 30px;
+}
+
+.para-two {
+margin-top: 30px;
+margin-bottom: 30px;
 }
 
 .about section p {
@@ -629,6 +638,12 @@ height: 90%;
 }
 
 @media only screen and (max-width: 425px) {
+
+.home h1 {
+font-size: 30px;
+padding: 12px;
+width: 100vw;
+}
 
 .about h2 {
 font-size: 25px;
