--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,7 @@ header {
 .menu .bar::after {
     content: '';
     position: absolute;
+    display: inline-block;
     height: 2px;
     width: 4rem;
     background-color: var(--main-white);
@@ -139,31 +140,6 @@ header {
     top: 15px;
 }
 
-.menu .bar,
-.menu .bar:before,
-.menu .bar:after {
-    content: '';
-    position: absolute;
-    height: 2px;
-    width: 4rem;
-    background-color: var(--main-white);
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    -webkit-transition: 350ms;
-    transition: 350ms;
-}
-
-.menu .bar:before {
-    top: -15px;
-}
-
-.menu .bar:after {
-    top: 15px;
-}
-
 .active .bar {
     background-color: transparent;
 }
@@ -180,21 +156,6 @@ header {
 
 .active .bar::before,
 .active .bar::after {
-    top: 0;
-}
-
-.active .bar:after {
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.active .bar:before {
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-}
-
-.active .bar:before,
-.active .bar:after {
     top: 0;
 }
 
@@ -423,12 +384,11 @@ header {
 .carousel img {
     -o-object-fit: cover;
     object-fit: cover;
-    height: 200px;
+    height: 150px;
     width: 100%;
     padding: 0 1rem;
 }
 
-/*
 .arrowbutton {
     width: 10rem;
     display: none;
@@ -483,7 +443,6 @@ header {
 .arrowbutton:hover .NextArrow::after {
     left: 3%;
 }
-*/
 
 
 /*Section - Cooking*/
@@ -720,7 +679,7 @@ footer p {
 }
 
 #page-loader i {
-    font-size: 15rem;
+    font-size: 5rem;
     top: 50%;
     left: 50%;
     margin-top: -50px;
@@ -755,7 +714,7 @@ footer p {
         padding-top: 2rem;
     }
 
-/*
+    /*
     #title-second::before,
     #title-second::after {
         width: 10rem;
@@ -807,6 +766,10 @@ footer p {
 
     .store {
         min-height: 40rem;
+    }
+    
+    .carousel img {
+        height: 200px;
     }
 
 }
@@ -912,15 +875,18 @@ footer p {
         font-size: 2.6rem;
     }
 
-/*
     .arrowbutton {
         display: block;
     }
-*/
 
     .carousel img {
         height: 400px;
     }
+
+    #page-loader i {
+        font-size: 10rem;
+    }
+
 
 }
 
