--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ header {
 .menu {
     padding: 2rem 2.5rem;
     position: fixed;
-    top: 15rem;
+    top: 10rem;
     right: 3rem;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
@@ -319,7 +319,7 @@ header {
 }
 
 .Covid_paragraph {
-    color: white;
+    color: white !important;
     font-size: 1em;
     padding: 0.2em 0.5em;
 }
@@ -807,6 +807,17 @@ footer p {
 
 @media screen and (min-width: 1000px) {
 
+    .menu {
+        padding: 2rem 2.5rem;
+        position: fixed;
+        top: 15rem;
+        right: 3rem;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1000;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+
     .Covid_update {
         text-align: center;
         background-color: #808000;
@@ -823,7 +834,6 @@ footer p {
     }
 
     .Covid_paragraph {
-        color: white;
         font-size: 2em;
         padding: 0.2em 0.5em;
     }
