added some padding to image gallery

--- a/styles.css
+++ b/styles.css
@@ -424,6 +424,7 @@ header {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 1rem;
+    padding: 1rem 0 3rem 0;
 }
 
 .carousel img {
